Add server-java-modern: Java 21 fork of server/ with modernized libraries
Parallel Java 21 server variant with feature-parity cherry-picks from develop
and a full library modernization pass. Builds in 4-6s, boots in 12s, listens
on TCP 43594 + WS 43494.

## Java 21 language modernizations
- instanceof pattern matching: 132 occurrences across 50 files
- Deprecated URL/Locale constructor fixes (3 files)
- Switch expression yield corrections (Payload38/69Parser)
- List.of / Set.of conversions (3 files)

## Library upgrades (21 jars -> 43 jars)
Phase 1 (CVE patches):
- commons-codec 1.14 -> 1.17.2
- commons-compress 1.18 -> 1.27.1 (4 CVEs)
- commons-lang3 3.12.0 -> 3.17.0
- log4j 2.17.0 -> 2.24.3 (api/core/iostreams, slf4j18 -> slf4j2)
- sqlite-jdbc 3.34.0 -> 3.47.1.0
- xstream 1.4.18 -> 1.4.21 (deserialization CVEs)
- slf4j-nop 2.0.0-alpha5 -> slf4j-api 2.0.16 (stable)

Phase 2 (major bumps):
- netty-all 4.1.33 fat-jar -> netty 4.1.119 (9 modular jars)
- guava 30.1.1 -> 33.4.0-jre (CVE-2023-2976; split out failureaccess-1.0.2)
- mysql-connector-java 8.0.19 -> mysql-connector-j 8.4.0
- org.json 20190722 -> 20240303
- Guice 5.0.2 -> 6.0.0 (with jakarta.inject-api-2.0.1 + javax.inject-1 + aopalliance-1.0)

Phase 3 (API migrations):
- JDA 4.0.0 fat-jar -> JDA 5.2.1 + 11 deps (okhttp/okio/kotlin-stdlib,
  jackson-core/databind/annotations, nv-websocket-client, commons-collections4,
  trove4j). Eliminates embedded SLF4J 1.x StaticLoggerBinder warning.

Dropped:
- commons-lang 2.6 (EOL since 2013) -> migrated to lang3 + commons-text 1.13.0
- disruptor 3.3.11 -> 4.0.0 (required by log4j 2.24 async logger at runtime)
- slf4j-nop -> redundant with log4j-slf4j2-impl

## DiscordService.java JDA 5 migration
- Removed AccountType import (enum removed in JDA 5)
- Removed javax.security.auth.login.LoginException
- Added GatewayIntent imports + channel-concrete imports (TextChannel,
  PrivateChannel, MessageChannel moved to entities.channel.*)
- new JDABuilder(AccountType.BOT).setToken